# krustyboard

./: .gitignore  README.md  krusty-board-NOTES.txt  krusty-killer.vbs  krusty-runner.vbs  krustyboard-killer.vbs  krustyboard-runner.vbs
KrustyBoard/: .gitignore  Cargo.toml  build.rs
KrustyBoard/src/: common.rs  input_proc.rs  keycodes.rs  krusty.rs  lib.rs  main.rs  public.rs  utils.rs
KrustyBoard/src/inputs/: _inputs.rs  bindings.rs  input_proc.rs  kbd.rs  kbd_bindings.rs  kbd_codes.rs  mouse.rs  mouse_bindings.rs
KrustyBoard/src/krusty/: _krusty.rs  action_gen.rs  combo.rs  combo_gen.rs  combo_maps.rs  krusty_app.rs  krusty_mouse.rs  krusty_snaps.rs  mod_keys.rs  mode_states.rs  system_tray.rs  win_groups.rs  win_hooks.rs  win_snaps.rs
KrustyBoard/src/utils/: brightness.rs  process_utils.rs  windows_utils.rs
