[package]
name = "krustyboard"
version = "0.5.0"
authors = ["yakrider <yakrider@gmail.com>"]
description = "Keyboard Remapping to support layer-2 and layer-3 functionality."
documentation = "https://docs.rs/krustyboard"
homepage = "https://github.com/yakrider/krustyboard"
repository = "https://github.com/yakrider/krustyboard"
readme = "README.md"
keywords = ["hotkey", "mouse", "keyboard", "shortcuts", "input", "layer-2", "layer-3"]
categories = ["api-bindings"]
license = "MIT"
edition = "2021"

[dependencies]
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24"
derivative = "2.2.0"
once_cell = "1.9.0"
brightness = "0.5.0"
async-trait = "0.1.50"
futures = "0.3.16"
rand = "0.8.5"
grouping_by = "0.2.2"
rustc-hash = "1.1.0"
derive_deref = "1.1.1"


[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
]

