[package]
name = "krustyboard"
version = "1.4.4"
authors = ["yakrider <yakrider@gmail.com>"]
description = "Keyboard Remapping to support layer-2 and layer-3 functionality."
documentation = "https://docs.rs/krustyboard"
homepage = "https://github.com/yakrider/krustyboard"
repository = "https://github.com/yakrider/krustyboard"
readme = "README.md"
keywords = ["hotkey", "mouse", "keyboard", "shortcuts", "input"]
categories = ["api-bindings"]
license = "MIT"
edition = "2021"
build = "build.rs"


[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "krustyboard.exe"
ProductName = "KrustyBoard"
ProductVersion = "0.5.0"


[dependencies]
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24"
derivative = "2.2.0"
once_cell = "1.9.0"
atomic_refcell = "0.1.13"
brightness = "0.5.0"
async-trait = "0.1.50"
futures = "0.3.16"
rand = "0.8.5"
itertools = "0.12.1"
rustc-hash = "1.1.0"
derive_deref = "1.1.1"
base64 = "0.21.0"
image = "0.24.6"
tray-icon = "0.13.0"
tao = "0.27.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_SystemServices",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
]

